syntax = "proto3";

option csharp_namespace = "GrpcPeerLoggerService";

import "google/protobuf/timestamp.proto";

package logging;


// The logging service definition.
service ServiceLogger {
  rpc Log (LogMessage) returns (Status);
}


// The response message containing the log messages
message LogMessage {
	string algoId = 1;
	int32 algo_instance = 2;  
	google.protobuf.Timestamp log_time = 3;
	string log_level = 4;
	string message = 5;
	string messenger_method = 6;
}

// The response message containing the log messages
message Status {
  bool status = 1;
}


// The ordering service definition.
service ServiceOrderAlerter {
  rpc Publish (OrderMessage) returns (PublishStatus);
}

// The response message containing the log messages
message OrderMessage {
	string orderid = 1;
	uint32 instrumentToken = 2;
	string tradingSymbol = 3;  
	string transactionType = 4;  
	double price = 5;  
	int32 quantity = 6;  
	double triggerPrice = 7;  
	string status = 8;  
	string statusMessage = 9;  
	string algorithm = 10;  
	int32 algoInstance = 11;  
	google.protobuf.Timestamp  orderTime = 12;  
	string orderType = 13;
}

// The response message containing the log messages
message PublishStatus {
  bool status = 1;
}